# rust-1brc

./: Cargo.toml  README.md
src/: main.rs
tests/: measurements.out
