[package]
name = "rust-1brc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug=true

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
rust_decimal = "1.34"
rust_decimal_macros = "1.34"
fast-float = "0.2"
rustc-hash = { version = "1.0"}
